# crypto-wallet-checker

./: README.md
backend/: Cargo.toml
backend/src/: main.rs  validators.rs
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.scss  App.tsx  main.tsx
frontend/src/components/: Footer.scss  Footer.tsx
